refactor: change structure of the project
refactor: change structure of the project

--- a/index.html
+++ b/index.html
@@ -7,6 +7,33 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <header class="header">
+        <div class="header__top">
+            <div class="header__top--title">Title</div>
+            <nav class="header__top--nav">
+                <ul>
+                    <li><a href="#">Link</a></li>
+                    <li><a href="#">Link</a></li>
+                    <li><a href="#">Link</a></li>
+                    <li><a href="#">Link</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+    <main class="main">
+        <h1>Name</h1>
+        <section class="about">
+            <h2>About me</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum, sapiente!</p>
+        </section>
+        <section class="code">
+            <pre>               
+                <code>
+                   console.log('hello world')
+                </code>
+          </pre>
+        </section>
+    </main>
+    <footer class="footer"></footer>
 </body>
 </html>
